--- a/index.html
+++ b/index.html
@@ -3,26 +3,27 @@
 <head>
 	<title>DuValle</title>
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 </head>
-<body style="background-image: url('assets/imgs/background/background-2.jpg');background-size: cover; background-repeat: no-repeat; height: 100vh;">
+<body>
 
-<section style="height: 100vh; background-color: rgba(0, 0, 0, .7);">
-	<div class="container" style="text-align: center;">
+<section>
+	<div class="container text-center">
 		<div class="row">
-			<div class="col-md-12  col-sm-12" style="top: 40vh;">
-				<h2 style="font-size: 56px; color: #fff;">Site em manutenção</h2>
-				<p style="font-size: 32px; color: #fff;">No ar em breve<p>
+			<div class="col-md-12  col-sm-12 top40">
+				<h2>Site em manutenção</h2>
+				<p>No ar em breve<p>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-12 col-sm-12" style="top: 60vh;">
+			<div class="col-md-12 col-sm-12 top60">
 				<div>
-					<h4 style="font-size: 32px; color: #fff;">Contate-nos</h4>
+					<h4>Contate-nos</h4>
 				</div>
 				<div>
-					<a href="" style="padding: 16px;"><img src="assets/imgs/icons/white/mail-icon-white.svg" style="width: 30px;"></a>
-					<a href="" style="padding: 16px;"><img src="assets/imgs/icons/white/phone-icon-white.svg" style="width: 30px;"></a>
-					<a href="https://wa.me/551832634272" style="padding: 16px;"><img src="assets/imgs/icons/white/whatsapp-icon-white.svg" style="width: 30px;"></a>
+					<a href=""><img src="assets/imgs/icons/white/mail-icon-white.svg"></a>
+					<a href=""><img src="assets/imgs/icons/white/phone-icon-white.svg"></a>
+					<a href="https://wa.me/551832634272"><img src="assets/imgs/icons/white/whatsapp-icon-white.svg"></a>
 				</div>
 			</div>
 		</div>
