--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>DuValle</title>
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
+	<meta content="width=device-width, initial-scale=1" name="viewport" />
 </head>
 <body>
 
@@ -12,18 +13,18 @@
 		<div class="row">
 			<div class="col-md-12  col-sm-12 top40">
 				<h2>Site em manutenção</h2>
-				<p>No ar em breve<p>
+				<p class="txt">No ar em breve<p>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-12 col-sm-12 top60">
 				<div>
-					<h4>Contate-nos</h4>
+					<h4 class="contatoTxt">Contate-nos</h4>
 				</div>
 				<div>
-					<a href="mailto:duvalle@duvalle.agr.br"><img src="assets/imgs/icons/white/mail-icon-white.svg"></a>
-					<a href="tel:+551832634272"><img src="assets/imgs/icons/white/phone-icon-white.svg"></a>
-					<a href="https://wa.me/551832634272"><img src="assets/imgs/icons/white/whatsapp-icon-white.svg" target="_self"></a>
+					<a href="mailto:duvalle@duvalle.agr.br"><img class="contatoImg" src="assets/imgs/icons/white/mail-icon-white.svg"></a>
+					<a href="tel:+551832634272"><img class="contatoImg" src="assets/imgs/icons/white/phone-icon-white.svg"></a>
+					<a href="https://wa.me/5518996613390"><img class="contatoImg" src="assets/imgs/icons/white/whatsapp-icon-white.svg" target="_self"></a>
 				</div>
 			</div>
 		</div>
