--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 					<h4 class="contatoTxt">Contate-nos</h4>
 				</div>
 				<div>
-					<a href="mailto:duvalle@duvalle.agr.br"><img class="contatoImg" src="assets/imgs/icons/white/mail-icon-white.svg"></a>
-					<a href="tel:+551832634272"><img class="contatoImg" src="assets/imgs/icons/white/phone-icon-white.svg"></a>
-					<a href="https://wa.me/5518996613390"><img class="contatoImg" src="assets/imgs/icons/white/whatsapp-icon-white.svg" target="_self"></a>
+					<a href="mailto:duvalle@duvalle.agr.br" target="_blank"><img class="contatoImg" src="assets/imgs/icons/white/mail-icon-white.svg"></a>
+					<a href="tel:+551832634272" target="_blank"><img class="contatoImg" src="assets/imgs/icons/white/phone-icon-white.svg"></a>
+					<a href="https://wa.me/5518996613390" target="_blank"><img class="contatoImg" src="assets/imgs/icons/white/whatsapp-icon-white.svg"></a>
 				</div>
 			</div>
 		</div>
