--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<ul class="listaNav">	
 		<li class="itemNav">
 			<a href="#" class="navbar-toggler">
-			  	<img src="assets/imgs/icons/white/email-icon-white.svg" class="imgSvg">
+			  	<img src="assets/imgs/icons/white/email-icon-white.svg" class="imgSvgLogo">
 			</a>
 		</li>
 		<li class="itemNav">
