--- a/index.html
+++ b/index.html
@@ -1,39 +1,56 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
-	<title>Duvalle</title>
+	<!-- Meta Tag's -->
+	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="">
+	<meta name="author" content="Guilherme Augusto & Victor Maloyama">
+	<link rel="canonical" href="https://chapabr.github.io/DuValle/">
+	<meta property="og:locale" content="pt_BR">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="DuValle">
+	<meta property="og:description" content="Portfólio pessoal de Guilherme Augusto com suas informações pessoais, capacidades e projetos.">
+	<meta property="og:url" content="https://chapabr.github.io/DuValle/">
+	<meta property="og:site_name" content="DuValle">
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:description" content="Portfólio pessoal de Guilherme Augusto com suas informações pessoais, capacidades e projetos.">
+	<meta name="keywords" content="Desenvolvedor, Guilherme Augusto, front-end, front end, back-end, back end, programador, full-stack, full stack, portfólio, landingpage, website, freelancer, e-commerce, sistemas, html, css, javascript, php, mysql">
+	<meta name="twitter:title" content="DuValle">
 	<!-- Bootstrap -->
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<!-- CSS Main -->
 	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
+	<!-- Title -->
+	<title>DuValle</title>
 </head>
 <body>
 
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-dark fixed">
+<nav class="navbar navbar-expand-lg navbar-light">
 	<a class="navbar-brand" href="index.html">
-		<img src="assets/imgs/icons/white/logo-icon-white.svg" class="imgSvg">
+		<img src="assets/imgs/icons/white/logo-icon-white.svg" class="imgSvgLogo">
 	</a>
 	<ul class="listaNav">	
 		<li class="itemNav">
-			<a href="#" class="navbar-toggler">
-			  	<img src="assets/imgs/icons/white/email-icon-white.svg" class="imgSvgLogo">
+			<a href="#" class="navbarItem">
+			  	<img src="assets/imgs/icons/white/email-icon-white.svg" class="imgSvg">
 			</a>
 		</li>
 		<li class="itemNav">
-			<a href="#" class="navbar-toggler">
-			  	<img src="assets/imgs/icons/white/phone-icon-white.svg" class="imgSvg">
+			<a href="#" class="navbarItem">
+			  	<img src="assets/imgs/icons/white/phone-icon-white.svg" class="imgSvgLogo">
 			</a>
 		</li>
 		<li class="itemNav">
-			<a href="#" class="navbar-toggler">
+			<a href="#" class="navbarItem">
 			  	<img src="assets/imgs/icons/white/whatsapp-icon-white.svg" class="imgSvg">
 			</a>
 		</li>
 		<li class="itemNav">
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Alterna navegação">
+			<a class="navbar-toggler navbarItem" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Alterna navegação">
 			  	<img src="assets/imgs/icons/white/hamburger-icon-white.svg" class="imgSvg">
-			</button>
+			</a>
 		</li>
 	</ul>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -54,10 +71,24 @@
   </div>
 </nav>
 
-<section>
+<section id="home">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
+				<div class="contentHome">
+					<h2 class="titleHome">Conheça nossa <br/>linha de produtos!</h2>
+					<p>A Duvalle oferece uma grande <br/>variedade de sementes para gramados</p>
+					<a href="" class="knowHome">Saiba mais</a>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+<section id="">
+	<div>
+		<div>
+			<div>
 				
 			</div>
 		</div>
@@ -65,9 +96,10 @@
 </section>
 
 <!-- Jquery -->
-<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
 <!-- Bootstrap -->
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<!-- Js Main -->
+  
 </body>
 </html>
