--- a/index.html
+++ b/index.html
@@ -78,18 +78,43 @@
 				<div class="contentHome">
 					<h2 class="titleHome">Conheça nossa <br/>linha de produtos!</h2>
 					<p>A Duvalle oferece uma grande <br/>variedade de sementes para gramados</p>
-					<a href="" class="knowHome">Saiba mais</a>
+					<a href="#" class="knowHome">Saiba mais</a>
 				</div>
 			</div>
 		</div>
 	</div>
 </section>
 
-<section id="">
-	<div>
-		<div>
-			<div>
-				
+<section id="information">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12 col-sm-12">
+				<ul class="nav nav-tabs">
+				  <li class="active"><a data-toggle="tab" href="#visao" class="active">Visão</a></li>
+				  <li><a data-toggle="tab" href="#missao">Missão</a></li>
+				  <li><a data-toggle="tab" href="#valores">Valores</a></li>
+				</ul>
+
+				<div class="tab-content">
+				  <div id="visao" class="tab-pane fade in active show">
+				    <p>
+				    	Aqui vai o conteudo de Visão da DuValle.<br/>
+				    	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras libero neque, venenatis vel imperdiet eu, finibus eu odio. Etiam non diam elit. Sed venenatis est non erat sagittis laoreet. Suspendisse interdum dapibus mi, quis commodo augue iaculis in. 
+					</p>
+				  </div>
+				  <div id="missao" class="tab-pane fade">
+				    <p>
+				    	A missão da DuValle vai aqui.<br/>
+				    	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras libero neque, venenatis vel imperdiet eu, finibus eu odio. Etiam non diam elit. Sed venenatis est non erat sagittis laoreet. Suspendisse interdum dapibus mi, quis commodo augue iaculis in. 
+				    </p>
+				  </div>
+				  <div id="valores" class="tab-pane fade">
+				    <p>
+				    	Esses são os valores da DuValle.<br/>
+				    	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras libero neque, venenatis vel imperdiet eu, finibus eu odio. Etiam non diam elit. Sed venenatis est non erat sagittis laoreet. Suspendisse interdum dapibus mi, quis commodo augue iaculis in. 
+				    </p>
+				  </div>
+				</div>
 			</div>
 		</div>
 	</div>
