--- a/index.html
+++ b/index.html
@@ -6,17 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="">
 	<meta name="author" content="Guilherme Augusto & Victor Maloyama">
-	<link rel="canonical" href="https://chapabr.github.io/DuValle/">
 	<meta property="og:locale" content="pt_BR">
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="DuValle">
-	<meta property="og:description" content="Portfólio pessoal de Guilherme Augusto com suas informações pessoais, capacidades e projetos.">
-	<meta property="og:url" content="https://chapabr.github.io/DuValle/">
 	<meta property="og:site_name" content="DuValle">
-	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:description" content="Portfólio pessoal de Guilherme Augusto com suas informações pessoais, capacidades e projetos.">
-	<meta name="keywords" content="Desenvolvedor, Guilherme Augusto, front-end, front end, back-end, back end, programador, full-stack, full stack, portfólio, landingpage, website, freelancer, e-commerce, sistemas, html, css, javascript, php, mysql">
-	<meta name="twitter:title" content="DuValle">
 	<!-- Bootstrap -->
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<!-- CSS Main -->
@@ -27,23 +20,23 @@
 <body>
 
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light">
+<nav class="navbar navbar-expand-lg navbar-light fixed-top white">
 	<a class="navbar-brand" href="index.html">
 		<img src="assets/imgs/icons/white/logo-icon-white.svg" class="imgSvgLogo">
 	</a>
 	<ul class="listaNav">	
 		<li class="itemNav">
-			<a href="#" class="navbarItem">
+			<a href="mailto:duvalle@duvalle.agr.br" class="navbarItem">
 			  	<img src="assets/imgs/icons/white/email-icon-white.svg" class="imgSvg">
 			</a>
 		</li>
 		<li class="itemNav">
-			<a href="#" class="navbarItem">
+			<a href="tel:+551832634272" class="navbarItem">
 			  	<img src="assets/imgs/icons/white/phone-icon-white.svg" class="imgSvgLogo">
 			</a>
 		</li>
 		<li class="itemNav">
-			<a href="#" class="navbarItem">
+			<a href="https://wa.me/551832634272" class="navbarItem">
 			  	<img src="assets/imgs/icons/white/whatsapp-icon-white.svg" class="imgSvg">
 			</a>
 		</li>
@@ -56,16 +49,16 @@
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link white" href="index.html">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Produtos</a>
+        <a class="nav-link white" href="produtos.html">Produtos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Seja nosso parceiro</a>
+        <a class="nav-link white" href="#">Seja nosso parceiro</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Contato</a>
+        <a class="nav-link white" href="#">Contato</a>
       </li>
     </ul>
   </div>
@@ -74,11 +67,11 @@
 <section id="home">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-12 col-sm-12">
+			<div class="col-12 col-md-12 col-sm-12">
 				<div class="contentHome">
 					<h2 class="titleHome">Conheça nossa <br/>linha de produtos!</h2>
 					<p>A Duvalle oferece uma grande <br/>variedade de sementes para gramados</p>
-					<a href="#" class="knowHome">Saiba mais</a>
+					<a href="#" class="btnGray">Saiba mais</a>
 				</div>
 			</div>
 		</div>
@@ -88,7 +81,7 @@
 <section id="information">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-12 col-sm-12">
+			<div class="col-12 col-md-12 col-sm-12">
 				<ul class="nav nav-tabs">
 				  <li class="active"><a data-toggle="tab" href="#visao" class="active">Visão</a></li>
 				  <li><a data-toggle="tab" href="#missao">Missão</a></li>
@@ -101,24 +94,44 @@
 				    	Aqui vai o conteudo de Visão da DuValle.<br/>
 				    	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras libero neque, venenatis vel imperdiet eu, finibus eu odio. Etiam non diam elit. Sed venenatis est non erat sagittis laoreet. Suspendisse interdum dapibus mi, quis commodo augue iaculis in. 
 					</p>
-				  </div>
+					<img src="assets/imgs/pictures/visao.jpg" class="imgHome">
+				  </div> 
 				  <div id="missao" class="tab-pane fade">
 				    <p>
 				    	A missão da DuValle vai aqui.<br/>
 				    	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras libero neque, venenatis vel imperdiet eu, finibus eu odio. Etiam non diam elit. Sed venenatis est non erat sagittis laoreet. Suspendisse interdum dapibus mi, quis commodo augue iaculis in. 
 				    </p>
+				    <img src="assets/imgs/pictures/missao.jpg" class="imgHome">
 				  </div>
 				  <div id="valores" class="tab-pane fade">
 				    <p>
 				    	Esses são os valores da DuValle.<br/>
 				    	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras libero neque, venenatis vel imperdiet eu, finibus eu odio. Etiam non diam elit. Sed venenatis est non erat sagittis laoreet. Suspendisse interdum dapibus mi, quis commodo augue iaculis in. 
 				    </p>
+				    <img src="assets/imgs/pictures/valores.jpg" class="imgHome">
 				  </div>
 				</div>
 			</div>
 		</div>
 	</div>
 </section>
+
+<!-- <footer id="footer">
+	<div class="container">
+		<div class="row">
+			<div class="col-12 col-md-12 col-sm-12">
+				<h3 class="titleFooter">Onde estamos?</h3>
+				<p class="textFooter">
+					UBS Santo Anastácio<br/>
+					Rodovia Raposo Tavares, Km 596,<br/>
+					Distrito Industrial<br/>
+					Cx.postal 93<br/>
+					Santo Anastacio - SP, CEP 19360-000<br/>
+				</p>
+			</div>
+		</div>
+	</div>
+</footer> -->
 
 <!-- Jquery -->
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
