--- a/manutencao/index.html
+++ b/manutencao/index.html
@@ -21,9 +21,15 @@
 					<h4>Contate-nos</h4>
 				</div>
 				<div>
-					<a href="mailto:duvalle@duvalle.agr.br"><img src="assets/imgs/icons/white/mail-icon-white.svg"></a>
-					<a href="tel:+551832634272"><img src="assets/imgs/icons/white/phone-icon-white.svg"></a>
-					<a href="https://wa.me/551832634272"><img src="assets/imgs/icons/white/whatsapp-icon-white.svg" target="_self"></a>
+					<a href="mailto:duvalle@duvalle.agr.br">
+						<img src="assets/imgs/icons/white/mail-icon-white.svg">
+					</a>
+					<a href="tel:+551832634272">
+						<img src="assets/imgs/icons/white/phone-icon-white.svg">
+					</a>
+					<a href="https://wa.me/551832634272">
+						<img src="assets/imgs/icons/white/whatsapp-icon-white.svg" target="_self">
+					</a>
 				</div>
 			</div>
 		</div>
