--- a/produtos.html
+++ b/produtos.html
@@ -60,6 +60,12 @@
       <li class="nav-item">
         <a class="nav-link green" href="#">Contato</a>
       </li>
+      <li class="nav-item fixed-bottom text-center">
+      	<img src="assets/imgs/icons/green/email-icon.svg" class="imgSvg img-fluid">
+      	<img src="assets/imgs/icons/green/phone-icon.svg" class="imgSvgLogo img-fluid">
+      	<img src="assets/imgs/icons/green/whatsapp-icon-green.svg" class="imgSvg img-fluid">
+      	<p class="navbarCopy">Copyright &copy; 2019 DuValle</p>
+      </li>
     </ul>
   </div>
 </nav>
@@ -72,6 +78,100 @@
 			</div>
 			<div class="col-6 col-md-6 col-sm-6 text-right">
 				<a href="#" class="btnFilter">Filtro</a>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-12 col-md-12 col-sm-12">
+				<ul class="productsList">
+					<li class="productsItem">
+						<img src="assets/imgs/produtos/andropogon.jpg" class="img-fluid">
+						<a href="#">Andropogon</a>
+					</li>
+					<li class="productsItem">
+						<img src="assets/imgs/produtos/aruana.jpg" class="img-fluid">
+						<a href="#">Aruana</a>
+					</li>
+					<li class="productsItem">
+						<img src="assets/imgs/produtos/llanero.jpg" class="img-fluid">
+						<a href="#">Llanero</a>
+					</li>
+					<li class="productsItem">
+						<img src="assets/imgs/produtos/decumbens.jpg" class="img-fluid">
+						<a href="#">Decumbens</a>
+					</li>
+					<li class="productsItem">
+						<img src="assets/imgs/produtos/humidicola.jpg" class="img-fluid">
+						<a href="#">Humidícola</a>
+					</li>
+					<li class="productsItem">
+						<img src="assets/imgs/produtos/mg-4.jpg" class="img-fluid">
+						<a href="#">MG - 4</a>
+					</li>
+					<li class="productsItem">
+						<img src="assets/imgs/produtos/ruziziensis.jpg" class="img-fluid">
+						<a href="#">Ruziziensis</a>
+					</li>
+					<li class="productsItem">
+						<img src="assets/imgs/produtos/mg-5.jpg" class="img-fluid">
+						<a href="#">MG - 5</a>
+					</li>
+					<li class="productsItem">
+						<img src="assets/imgs/produtos/batatais.jpg" class="img-fluid">
+						<a href="#">Batatais</a>
+					</li>
+					<li class="productsItem">
+						<img src="assets/imgs/produtos/massai.jpg" class="img-fluid">
+						<a href="#">Massai</a>
+					</li>
+					<li class="productsItem">
+						<img src="assets/imgs/produtos/milheto.jpg" class="img-fluid">
+						<a href="#">Milheto</a>
+					</li>
+					<li class="productsItem">
+						<img src="assets/imgs/produtos/mombaca.jpg" class="img-fluid">
+						<a href="#">Mombaça</a>
+					</li>
+					<li class="productsItem">
+						<img src="assets/imgs/produtos/pensacola.jpg" class="img-fluid">
+						<a href="#">Pensacola</a>
+					</li>
+					<li class="productsItem">
+						<img src="assets/imgs/produtos/pojuca.jpg" class="img-fluid">
+						<a href="#">Pojuca</a>
+					</li>
+					<li class="productsItem">
+						<img src="assets/imgs/produtos/tanzania.jpg" class="img-fluid">
+						<a href="#">Tanzânia</a>
+					</li>
+					<li class="productsItem">
+						<img src="assets/imgs/produtos/aveia-preta.jpg" class="img-fluid">
+						<a href="#">Aveia Preta</a>
+					</li>
+					<li class="productsItem">
+						<img src="assets/imgs/produtos/azevem.jpg" class="img-fluid">
+						<a href="#">Azevém</a>
+					</li>
+					<li class="productsItem">
+						<img src="assets/imgs/produtos/crotalaria-juncea.jpg" class="img-fluid">
+						<a href="#">Crotalária Juncea</a>
+					</li>
+					<li class="productsItem">
+						<img src="assets/imgs/produtos/estilozantes-c-grande.jpg" class="img-fluid">
+						<a href="#">Estilozantes Campo Grande</a>
+					</li>
+					<li class="productsItem">
+						<img src="assets/imgs/produtos/feijao-de-porco.jpg" class="img-fluid">
+						<a href="#">Feijão de Porco</a>
+					</li>
+					<li class="productsItem">
+						<img src="assets/imgs/produtos/leucena.jpg" class="img-fluid">
+						<a href="#">Leucena</a>
+					</li>
+					<li class="productsItem">
+						<img src="assets/imgs/produtos/mucuna-preta.jpg" class="img-fluid">
+						<a href="#">Mucuna Preta</a>
+					</li>
+				</ul>
 			</div>
 		</div>
 	</div>
