--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
       <li class="nav-item">
         <a class="nav-link white" href="#">Contato</a>
       </li>
+      <li class="nav-item fixed-bottom text-center">
+      	<img src="assets/imgs/icons/green/email-icon.svg" class="imgSvg">
+      	<img src="assets/imgs/icons/green/phone-icon.svg" class="imgSvgLogo">
+      	<img src="assets/imgs/icons/green/whatsapp-icon-green.svg" class="imgSvg">
+      	<p class="navbarCopy">Copyright &copy; 2019 DuValle</p>
+      </li>
     </ul>
   </div>
 </nav>
