--- a/produtos.html
+++ b/produtos.html
@@ -84,92 +84,136 @@
 			<div class="col-12 col-md-12 col-sm-12">
 				<ul class="productsList">
 					<li class="productsItem">
-						<img src="assets/imgs/produtos/andropogon.jpg" class="img-fluid">
-						<a href="#">Andropogon</a>
+						<a href="produtos/andropogon.html">
+							<img src="assets/imgs/produtos/andropogon.jpg" class="img-fluid">
+							<span>Andropogon</span>
+						</a>
 					</li>
 					<li class="productsItem">
-						<img src="assets/imgs/produtos/aruana.jpg" class="img-fluid">
-						<a href="#">Aruana</a>
+						<a href="produtos/aruana.html">
+							<img src="assets/imgs/produtos/aruana.jpg" class="img-fluid">
+							<span>Aruana</span>
+						</a>
 					</li>
 					<li class="productsItem">
-						<img src="assets/imgs/produtos/llanero.jpg" class="img-fluid">
-						<a href="#">Llanero</a>
+						<a href="produtos/llanero.html">
+							<img src="assets/imgs/produtos/llanero.jpg" class="img-fluid">
+							<span>Llanero</span>
+						</a>
 					</li>
 					<li class="productsItem">
-						<img src="assets/imgs/produtos/decumbens.jpg" class="img-fluid">
-						<a href="#">Decumbens</a>
+						<a href="produtos/decumbens.html">
+							<img src="assets/imgs/produtos/decumbens.jpg" class="img-fluid">
+							<span>Decumbens</span>
+						</a>
 					</li>
 					<li class="productsItem">
-						<img src="assets/imgs/produtos/humidicola.jpg" class="img-fluid">
-						<a href="#">Humidícola</a>
+						<a href="produtos/humidicola.html">
+							<img src="assets/imgs/produtos/humidicola.jpg" class="img-fluid">
+							<span>Humidícola</span>
+						</a>
 					</li>
 					<li class="productsItem">
-						<img src="assets/imgs/produtos/mg-4.jpg" class="img-fluid">
-						<a href="#">MG - 4</a>
+						<a href="produtos/mg-4.html">
+							<img src="assets/imgs/produtos/mg-4.jpg" class="img-fluid">
+							<span>MG - 4</span>
+						</a>
 					</li>
 					<li class="productsItem">
-						<img src="assets/imgs/produtos/ruziziensis.jpg" class="img-fluid">
-						<a href="#">Ruziziensis</a>
+						<a href="produtos/ruziziensis.html">
+							<img src="assets/imgs/produtos/ruziziensis.jpg" class="img-fluid">
+							<span>Ruziziensis</span>
+						</a>
 					</li>
 					<li class="productsItem">
-						<img src="assets/imgs/produtos/mg-5.jpg" class="img-fluid">
-						<a href="#">MG - 5</a>
+						<a href="produtos/mg-5.html">
+							<img src="assets/imgs/produtos/mg-5.jpg" class="img-fluid">
+							<span>MG - 5</span>
+						</a>
 					</li>
 					<li class="productsItem">
-						<img src="assets/imgs/produtos/batatais.jpg" class="img-fluid">
-						<a href="#">Batatais</a>
+						<a href="produtos/batatais.html">
+							<img src="assets/imgs/produtos/batatais.jpg" class="img-fluid">
+							<span>Batatais</span>
+						</a>
 					</li>
 					<li class="productsItem">
-						<img src="assets/imgs/produtos/massai.jpg" class="img-fluid">
-						<a href="#">Massai</a>
+						<a href="produtos/massai.html">
+							<img src="assets/imgs/produtos/massai.jpg" class="img-fluid">
+							<span>Massai</span>
+						</a>
 					</li>
 					<li class="productsItem">
-						<img src="assets/imgs/produtos/milheto.jpg" class="img-fluid">
-						<a href="#">Milheto</a>
+						<a href="produtos/milheto.html">
+							<img src="assets/imgs/produtos/milheto.jpg" class="img-fluid">
+							<span>Milheto</span>
+						</a>	
 					</li>
 					<li class="productsItem">
-						<img src="assets/imgs/produtos/mombaca.jpg" class="img-fluid">
-						<a href="#">Mombaça</a>
+						<a href="produtos/mombaca.html">
+							<img src="assets/imgs/produtos/mombaca.jpg" class="img-fluid">
+							<span>Mombaça</span>
+						</a>
 					</li>
 					<li class="productsItem">
-						<img src="assets/imgs/produtos/pensacola.jpg" class="img-fluid">
-						<a href="#">Pensacola</a>
+						<a href="produtos/pensacola.html">
+							<img src="assets/imgs/produtos/pensacola.jpg" class="img-fluid">
+							<span>Pensacola</span>
+						</a>
 					</li>
 					<li class="productsItem">
-						<img src="assets/imgs/produtos/pojuca.jpg" class="img-fluid">
-						<a href="#">Pojuca</a>
+						<a href="produtos/pojuca.html">
+							<img src="assets/imgs/produtos/pojuca.jpg" class="img-fluid">
+							<span>Pojuca</span>
+						</a>	
 					</li>
 					<li class="productsItem">
-						<img src="assets/imgs/produtos/tanzania.jpg" class="img-fluid">
-						<a href="#">Tanzânia</a>
+						<a href="produtos/tanzania.html">
+							<img src="assets/imgs/produtos/tanzania.jpg" class="img-fluid">
+							<span>Tanzânia</span>
+						</a>
 					</li>
 					<li class="productsItem">
-						<img src="assets/imgs/produtos/aveia-preta.jpg" class="img-fluid">
-						<a href="#">Aveia Preta</a>
+						<a href="produtos/decumbens.html">
+							<img src="assets/imgs/produtos/aveia-preta.jpg" class="img-fluid">
+							<span>Aveia Preta</span>
+						</a>
 					</li>
 					<li class="productsItem">
-						<img src="assets/imgs/produtos/azevem.jpg" class="img-fluid">
-						<a href="#">Azevém</a>
+						<a href="produtos/azevem.html">
+							<img src="assets/imgs/produtos/azevem.jpg" class="img-fluid">
+							<span>Azevém</span>
+						</a>
 					</li>
 					<li class="productsItem">
-						<img src="assets/imgs/produtos/crotalaria-juncea.jpg" class="img-fluid">
-						<a href="#">Crotalária Juncea</a>
+						<a href="produtos/crotalaria-juncea.html">
+							<img src="assets/imgs/produtos/crotalaria-juncea.jpg" class="img-fluid">
+							<span>Crotalária Juncea</span>
+						</a>
 					</li>
 					<li class="productsItem">
-						<img src="assets/imgs/produtos/estilozantes-c-grande.jpg" class="img-fluid">
-						<a href="#">Estilozantes Campo Grande</a>
+						<a href="produtos/estilozantes-campo-grande.html">
+							<img src="assets/imgs/produtos/estilozantes-campo-grande.jpg" class="img-fluid">
+							<span>Estilozantes Campo Grande</span>
+						</a>
 					</li>
 					<li class="productsItem">
-						<img src="assets/imgs/produtos/feijao-de-porco.jpg" class="img-fluid">
-						<a href="#">Feijão de Porco</a>
+						<a href="produtos/feijao-de-porco.html">	
+							<img src="assets/imgs/produtos/feijao-de-porco.jpg" class="img-fluid">
+							<span>Feijão de Porco</span>
+						</a>
 					</li>
 					<li class="productsItem">
-						<img src="assets/imgs/produtos/leucena.jpg" class="img-fluid">
-						<a href="#">Leucena</a>
+						<a href="produtos/leucena.html">
+							<img src="assets/imgs/produtos/leucena.jpg" class="img-fluid">
+							<span>Leucena</span>
+						</a>
 					</li>
 					<li class="productsItem">
-						<img src="assets/imgs/produtos/mucuna-preta.jpg" class="img-fluid">
-						<a href="#">Mucuna Preta</a>
+						<a href="produtos/mucuna-preta.html">
+							<img src="assets/imgs/produtos/mucuna-preta.jpg" class="img-fluid">
+							<span>Mucuna Preta</span>
+						</a>
 					</li>
 				</ul>
 			</div>
