--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			</a>
 		</li>
 		<li class="itemNav">
-			<a href="https://wa.me/551832634272" class="navbarItem">
+			<a href="https://wa.me/+5518996613390" class="navbarItem">
 			  	<img src="assets/imgs/icons/white/whatsapp-icon-white.svg" class="imgSvg">
 			</a>
 		</li>
