--- a/produtos.html
+++ b/produtos.html
@@ -86,133 +86,133 @@
 					<li class="productsItem">
 						<a href="produtos/andropogon.html">
 							<img src="assets/imgs/produtos/andropogon.jpg" class="img-fluid imgProduct">
-							<span>Andropogon</span>
+							<span class="btnGreen">Andropogon</span>
 						</a>
 					</li>
 					<li class="productsItem">
 						<a href="produtos/aruana.html">
 							<img src="assets/imgs/produtos/aruana.jpg" class="img-fluid imgProduct">
-							<span>Aruana</span>
+							<span class="btnGreen">Aruana</span>
 						</a>
 					</li>
 					<li class="productsItem">
 						<a href="produtos/llanero.html">
 							<img src="assets/imgs/produtos/llanero.jpg" class="img-fluid imgProduct">
-							<span>Llanero</span>
+							<span class="btnGreen">Llanero</span>
 						</a>
 					</li>
 					<li class="productsItem">
 						<a href="produtos/decumbens.html">
 							<img src="assets/imgs/produtos/decumbens.jpg" class="img-fluid imgProduct">
-							<span>Decumbens</span>
+							<span class="btnGreen">Decumbens</span>
 						</a>
 					</li>
 					<li class="productsItem">
 						<a href="produtos/humidicola.html">
 							<img src="assets/imgs/produtos/humidicola.jpg" class="img-fluid imgProduct">
-							<span>Humidícola</span>
+							<span class="btnGreen">Humidícola</span>
 						</a>
 					</li>
 					<li class="productsItem">
 						<a href="produtos/mg-4.html">
 							<img src="assets/imgs/produtos/mg-4.jpg" class="img-fluid imgProduct">
-							<span>MG - 4</span>
+							<span class="btnGreen">MG - 4</span>
 						</a>
 					</li>
 					<li class="productsItem">
 						<a href="produtos/ruziziensis.html">
 							<img src="assets/imgs/produtos/ruziziensis.jpg" class="img-fluid imgProduct">
-							<span>Ruziziensis</span>
+							<span class="btnGreen">Ruziziensis</span>
 						</a>
 					</li>
 					<li class="productsItem">
 						<a href="produtos/mg-5.html">
 							<img src="assets/imgs/produtos/mg-5.jpg" class="img-fluid imgProduct">
-							<span>MG - 5</span>
+							<span class="btnGreen">MG - 5</span>
 						</a>
 					</li>
 					<li class="productsItem">
 						<a href="produtos/batatais.html">
 							<img src="assets/imgs/produtos/batatais.jpg" class="img-fluid imgProduct">
-							<span>Batatais</span>
+							<span class="btnGreen">Batatais</span>
 						</a>
 					</li>
 					<li class="productsItem">
 						<a href="produtos/massai.html">
 							<img src="assets/imgs/produtos/massai.jpg" class="img-fluid imgProduct">
-							<span>Massai</span>
+							<span class="btnGreen">Massai</span>
 						</a>
 					</li>
 					<li class="productsItem">
 						<a href="produtos/milheto.html">
 							<img src="assets/imgs/produtos/milheto.jpg" class="img-fluid imgProduct">
-							<span>Milheto</span>
+							<span class="btnGreen">Milheto</span>
 						</a>	
 					</li>
 					<li class="productsItem">
 						<a href="produtos/mombaca.html">
 							<img src="assets/imgs/produtos/mombaca.jpg" class="img-fluid imgProduct">
-							<span>Mombaça</span>
+							<span class="btnGreen">Mombaça</span>
 						</a>
 					</li>
 					<li class="productsItem">
 						<a href="produtos/pensacola.html">
 							<img src="assets/imgs/produtos/pensacola.jpg" class="img-fluid imgProduct">
-							<span>Pensacola</span>
+							<span class="btnGreen">Pensacola</span>
 						</a>
 					</li>
 					<li class="productsItem">
 						<a href="produtos/pojuca.html">
 							<img src="assets/imgs/produtos/pojuca.jpg" class="img-fluid imgProduct">
-							<span>Pojuca</span>
+							<span class="btnGreen">Pojuca</span>
 						</a>	
 					</li>
 					<li class="productsItem">
 						<a href="produtos/tanzania.html">
 							<img src="assets/imgs/produtos/tanzania.jpg" class="img-fluid imgProduct">
-							<span>Tanzânia</span>
+							<span class="btnGreen">Tanzânia</span>
 						</a>
 					</li>
 					<li class="productsItem">
 						<a href="produtos/decumbens.html">
 							<img src="assets/imgs/produtos/aveia-preta.jpg" class="img-fluid imgProduct">
-							<span>Aveia Preta</span>
+							<span class="btnGreen">Aveia Preta</span>
 						</a>
 					</li>
 					<li class="productsItem">
 						<a href="produtos/azevem.html">
 							<img src="assets/imgs/produtos/azevem.jpg" class="img-fluid imgProduct">
-							<span>Azevém</span>
+							<span class="btnGreen">Azevém</span>
 						</a>
 					</li>
 					<li class="productsItem">
 						<a href="produtos/crotalaria-juncea.html">
 							<img src="assets/imgs/produtos/crotalaria-juncea.jpg" class="img-fluid imgProduct">
-							<span>Crotalária Juncea</span>
+							<span class="btnGreen">Crotalária Juncea</span>
 						</a>
 					</li>
 					<li class="productsItem">
 						<a href="produtos/estilozantes-campo-grande.html">
 							<img src="assets/imgs/produtos/estilozantes-campo-grande.jpg" class="img-fluid imgProduct">
-							<span>Estilozantes Campo Grande</span>
+							<span class="btnGreen">Estilozantes Campo Grande</span>
 						</a>
 					</li>
 					<li class="productsItem">
 						<a href="produtos/feijao-de-porco.html">	
 							<img src="assets/imgs/produtos/feijao-de-porco.jpg" class="img-fluid imgProduct">
-							<span>Feijão de Porco</span>
+							<span class="btnGreen">Feijão de Porco</span>
 						</a>
 					</li>
 					<li class="productsItem">
 						<a href="produtos/leucena.html">
 							<img src="assets/imgs/produtos/leucena.jpg" class="img-fluid imgProduct">
-							<span>Leucena</span>
+							<span class="btnGreen">Leucena</span>
 						</a>
 					</li>
 					<li class="productsItem">
 						<a href="produtos/mucuna-preta.html">
 							<img src="assets/imgs/produtos/mucuna-preta.jpg" class="img-fluid imgProduct">
-							<span>Mucuna Preta</span>
+							<span class="btnGreen">Mucuna Preta</span>
 						</a>
 					</li>
 				</ul>
