--- a/produtos/andropogon.html
+++ b/produtos/andropogon.html
@@ -223,6 +223,13 @@
 				  </tbody>
 				</table>
 			</div>
+			<div class="col-12 col-md-12 col-sm-12 fixed-bottom text-center">
+				<a href="#" class="btnGreen">Cotar</a><br/>
+				<a href="../produtos.html" class="btnReturn">
+					<img src="../assets/imgs/icons/green/arrow-icon.svg" class="arrowIcon">
+					Voltar para produtos
+				</a>
+			</div>
 		</div>
 	</div>
 </section>
